<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/almostBlack"
        android:orientation="vertical"
        tools:context=".view.ScrCalculator"
        tools:ignore="HardcodedText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="20dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:onClick="openLenngthMeasurementScreen"
                android:src="@drawable/ic_length"
                app:layout_constraintBottom_toTopOf="@+id/workingsTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/workingsTV"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:lines="2"
                android:maxLines="2"
                android:text=""
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/resultsTV"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/resultsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:text=""
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout style="@style/buttonRow">

            <Button
                style="@style/buttonNumber"
                android:onClick="allClearAction"
                android:text="@string/ac"
                android:textColor="@color/red" />

            <Button
                style="@style/buttonNumber"
                android:onClick="backSpaceAction"
                android:text="@string/back"
                android:textColor="@color/red" />

            <Button
                style="@style/buttonNumber"
                android:contentDescription="@android:string/VideoView_error_button"
                android:text="" />

            <Button
                style="@style/buttonOperator"
                android:text="@string/slash" />

        </LinearLayout>

        <LinearLayout style="@style/buttonRow">

            <Button
                style="@style/buttonNumber"
                android:text="@string/seven" />

            <Button
                style="@style/buttonNumber"
                android:text="@string/eight" />

            <Button
                style="@style/buttonNumber"
                android:text="@string/nine" />

            <Button
                style="@style/buttonOperator"
                android:text="@string/into" />

        </LinearLayout>

        <LinearLayout style="@style/buttonRow">

            <Button
                style="@style/buttonNumber"
                android:text="@string/four" />

            <Button
                style="@style/buttonNumber"
                android:text="@string/five" />

            <Button
                style="@style/buttonNumber"
                android:text="@string/six" />

            <Button
                style="@style/buttonOperator"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout style="@style/buttonRow">

            <Button
                style="@style/buttonNumber"
                android:text="@string/one" />

            <Button
                style="@style/buttonNumber"
                android:text="@string/two" />

            <Button
                style="@style/buttonNumber"
                android:text="@string/three" />

            <Button
                style="@style/buttonOperator"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout style="@style/buttonRow">

            <Button
                style="@style/buttonNumber"
                android:text="@string/dot" />

            <Button
                style="@style/buttonNumber"
                android:text="@string/zero" />

            <Button
                style="@style/buttonNumber"
                android:layout_weight="2"
                android:background="@color/orange"
                android:onClick="equalsAction"
                android:text="@string/equals"
                android:textColor="#455A64"
                android:textSize="40sp" />

        </LinearLayout>


    </LinearLayout>

    </ScrollView>
</layout>